--- a/lms/src/main/resources/application.properties
+++ b/lms/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+jwt.secret=B7A5FZDd0kswmZ2MP5atGN4Cm17FKfpb
+jwt.expiration=86400000
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
